populate latestPrices and previousCloseByTicker