@@ -6,10 +6,7 @@ import stock.price.analytics.cache.model.*;
 import stock.price.analytics.model.prices.enums.StockTimeframe;
 import stock.price.analytics.model.prices.ohlc.*;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -36,15 +33,12 @@ public class HigherTimeframePricesCacheService {
                 .flatMap(prices -> prices.stream().sorted(Comparator.comparing(AbstractPrice::getStartDate).reversed()).limit(2))
                 .collect(Collectors.groupingBy(AbstractPrice::getTicker));
         List<T> latestPrices = new ArrayList<>();
-        Map<String, Double> previousCloseByTicker = previousTwoPricesByTicker.entrySet().stream()
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        entry -> {
-                            latestPrices.add(entry.getValue().getFirst()); // add most recent price to list
-                            return entry.getValue().size() > 1 ? entry.getValue().get(1).getClose()
-                                    : entry.getValue().getFirst().getOpen(); // if IPO week, month, quarter, year -> take opening price
-                        }
-                ));
+        Map<String, Double> previousCloseByTicker = new HashMap<>();
+        for (List<T> prices : previousTwoPricesByTicker.values()) {
+            latestPrices.add(prices.get(0)); // most recent price
+            previousCloseByTicker.put(prices.get(0).getTicker(),
+                    prices.size() > 1 ? prices.get(1).getClose() : prices.get(0).getOpen()); // if IPO week, month, quarter, year -> take opening price
+        }
 
         return latestPrices.stream()
                 .map(price -> (PriceWithPrevClose) switch (price.getTimeframe()) {
